CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ShareShift)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(./log DIE_LOG)
AUX_SOURCE_DIRECTORY(./mysql_pool DIE_MYSQL_POOL)
AUX_SOURCE_DIRECTORY(./base DIE_BASE)


SET(EXCUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR} ./build)

INCLUDE_DIRECTORIES(./log)
INCLUDE_DIRECTORIES(./base)
INCLUDE_DIRECTORIES(./mysql_pool)


ADD_EXECUTABLE(ShareShift ${DIR_SRCS} ${DIE_LOG} ${DIE_MYSQL_POOL} ${DIE_BASE})
TARGET_LINK_LIBRARIES(ShareShift mysqlclient)