CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ShareShift)

AUX_SOURCE_DIRECTORY(.. DIR_SRCS)
AUX_SOURCE_DIRECTORY(log DIE_LOG)
AUX_SOURCE_DIRECTORY(jsoncpp DIE_JSONCPP)
AUX_SOURCE_DIRECTORY(redis DIE_REDIS)
AUX_SOURCE_DIRECTORY(mysql_pool DIE_MYSQL_POOL)
AUX_SOURCE_DIRECTORY(base DIE_BASE)


SET(EXCUTABLE_OUTPUT_PATH .. ./build)


INCLUDE_DIRECTORIES(/usr/local/include/fastcommon /usr/local/include/fastdfs /usr/local/include/mysql)
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(log)
INCLUDE_DIRECTORIES(base)
INCLUDE_DIRECTORIES(mysql_pool)
INCLUDE_DIRECTORIES(redis)
INCLUDE_DIRECTORIES(jsoncpp)



ADD_EXECUTABLE(ShareShift ${DIR_SRCS} ${DIE_LOG} ${DIE_MYSQL_POOL} ${DIE_BASE} ${DIE_JSONCPP} ${DIE_REDIS})
TARGET_LINK_LIBRARIES(ShareShift mysqlclient pthread fastcommon)