CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ShareShift)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(log DIR_LOG)
AUX_SOURCE_DIRECTORY(jsoncpp DIR_JSONCPP)
AUX_SOURCE_DIRECTORY(redis DIR_REDIS)
AUX_SOURCE_DIRECTORY(mysql_pool DIR_MYSQL_POOL)
AUX_SOURCE_DIRECTORY(base DIR_BASE)
AUX_SOURCE_DIRECTORY(api DIR_API)


SET(EXCUTABLE_OUTPUT_PATH .. ./build)


INCLUDE_DIRECTORIES(/usr/local/include/fastcommon /usr/local/include/fastdfs /usr/local/include/mysql)
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(log)
INCLUDE_DIRECTORIES(base)
INCLUDE_DIRECTORIES(mysql_pool)
INCLUDE_DIRECTORIES(redis)
INCLUDE_DIRECTORIES(jsoncpp)
INCLUDE_DIRECTORIES(api)



ADD_EXECUTABLE(ShareShift ${DIR_SRCS} ${DIR_LOG} ${DIR_MYSQL_POOL} ${DIR_BASE} ${DIR_JSONCPP} ${DIR_API})
TARGET_LINK_LIBRARIES(ShareShift mysqlclient pthread fastcommon)